# P5

./: README.md
my samples/: Megalovana.sco  champion-battle.sco
src/: meson.build
src/effects/: chorus.cpp  chorus.h  superdistor.cpp  superdistor.h
src/instruments/: campana.cpp  campana.h  fagot.cpp  fagot.h  genericins.cpp  genericins.h  guitar.cpp  guitar.h  instrument.cpp  kick.cpp  kick.h  seno.cpp  seno.h  sinfm1.cpp  sinfm1.h  sintesisFM.cpp  sintesisFM.h  snare.cpp  snare.h  trumpet.cpp  woodwind.cpp  woodwind.h
work/: doremi.sco  dumb.orc  effects.orc  graficas.asv  graficas.m  seno.orc  starwars.sco  tbl.txt  x.txt  x_shrt.txt
work/music/: 1step.orc  1step.sco  Gasolina.orc  Layla.orc  Layla.sco  NeverGonna.orc  NevergonnaGiveU.sco
work/nuestras_orquestras/: Hawaii.orc  ToyStory.orc
